# banking-es-feature-redis-integration

./: .env  .gitignore  Cargo.toml  README.md
.sqlx/: query-35bbfc95309272b60b82e9838c1f022ca382d52f7ca92a1629057cb9a1f95fcd.json  query-3c32433ee92dd058d50b38732a1030f48d0d9cf4662e10cd27f9308c5f5b9aaf.json  query-42014f2468333823b0a5d83f5f7b5d10b3d84fdf2c54e9818e7e54ff4dfb3adc.json  query-d605b3f879e55e501cb200cc601c979389b72ea6a35983dd37b3582d0a33cb6b.json
migrations/: 006_create_users_table.sql  007_add_unique_constraint_aggregate_id_version_to_events.sql
src/: lib.rs  main.rs
src/application/: services.rs
src/infrastructure/: auth.rs  cache_service.rs  event_store.rs  init.rs  kafka_abstraction.rs  kafka_dlq.rs  kafka_event_processor.rs  kafka_monitoring.rs  kafka_recovery.rs  kafka_recovery_strategies.rs  kafka_tracing.rs  mod.rs  projections.rs  repository.rs  user_repository.rs
src/web/: handlers.rs  routes.rs
static/: index.html
tests/: integration_tests.rs  redis_cache_integration.rs
